# functional

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  all_tests.cpp
fun/: option.h  option.ipp  option.tpp  option_inner.h  result.h  result.ipp  result.tpp  type_support.h
functional/: CMakeLists.txt
functional/cmake/: FunctionalConfig.cmake
functional/include/fun/: option.h  pipe.h  result.h  try.h  type_support.h
functional/include/fun/option/: option.declare.h  option.impl.h  option_inner.h
functional/include/fun/result/: result.declare.h  result.impl.h
functional/src/: version.inline.h
test/: CMakeLists.txt  all_tests.cpp  testing.h
